<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".ListaWymian"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fadeScrollbars="false"
        android:scrollIndicators="right">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rozrzadLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis"
                android:weightSum="1">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView"
                    android:src="@drawable/rozrzad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_timing_belt"
                    android:id="@+id/rozrzadTextView"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rozrzadPrzebiegTextView"
                    android:text="@string/label_no_entry"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView9"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/olejFiltrLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView2"
                    android:src="@drawable/oil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_oil_filter"
                    android:id="@+id/textView"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/oleFiltrPrzebiegTextView"
                    android:text="@string/label_no_entry"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView10"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filtrPowietrzaLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:src="@drawable/airfilter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_air_filter"
                    android:id="@+id/textView2"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/filtrPowietrzaTextView"
                    android:text="@string/label_no_entry"
                    android:longClickable="false"
                    android:paddingTop="15dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingRight="10dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView11"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filtrPaliwaLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:longClickable="true"
                android:onClick="dodajWpis">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView4"
                    android:src="@drawable/fuelfilter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fuel_filter"
                    android:id="@+id/textView3"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/filtrPaliwaTextView"
                    android:text="@string/label_no_entry"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView12"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filtrKabinowyLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView5"
                    android:src="@drawable/airfilter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cabin_filter"
                    android:id="@+id/textView4"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/filtrKabinowyTextView"
                    android:text="@string/label_no_entry"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView13"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/naprawyLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView16"
                    android:src="@drawable/repair" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_repairs"
                    android:id="@+id/textView10"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/naprawaTextView"
                    android:text="@string/label_no_entry"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView17"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ocLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView6"
                    android:src="@drawable/oc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_oc"
                    android:id="@+id/textView5"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ocTextView"
                    android:text="@string/label_no_entry"
                    android:clickable="false"
                    android:inputType="date"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView14"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/przegladLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="dodajWpis"
                android:clickable="true"
                android:longClickable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView7"
                    android:src="@drawable/przeglad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_inspection"
                    android:id="@+id/textView6"
                    android:width="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/przegladTextView"
                    android:text="@string/label_no_entry"
                    android:clickable="false"
                    android:inputType="date"
                    android:longClickable="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView15"
                    android:src="@android:drawable/ic_menu_edit"
                    android:paddingTop="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
